Revelation changelog

---------------[ xxx-xx-xx : 0.3.4 ]---------------

2004-09-07  Erik Grinaker <erikg@codepoet.no>

	* fixed a bug which displayed the Domain fields tooltip as
	its name

	* the searchbar follows the detachable toolbar setting in gnome


---------------[ 2004-08-30 : 0.3.3 ]---------------

2004-08-30  Erik Grinaker <erikg@codepoet.no>

	* bumped version number to 0.3.3

2004-08-29  Erik Grinaker <erikg@codepoet.no>

	* renamed the XML (eXtensible Markup Language) filetype to XML

2004-08-28  Erik Grinaker <erikg@codepoet.no>

	* improved the xhtml exporter

2004-08-27  Erik Grinaker <erikg@codepoet.no>

	* added an xhtml/css exporter

	* fixed a couple of bugs from the change to entry subclasses

2004-08-26  Erik Grinaker <erikg@codepoet.no>

	* created entry subclasses for various types instead of
	using the entry dict

	* created field subclasses for various types instead of
	using the field dict

2004-08-24  Erik Grinaker <erikg@codepoet.no>

	* changed some launcher substitution variables

	* added optional variables and optional substring expansions
	to the launcher expansion syntax

	* changed the default launchers

	* added tooltips to launcher preferences

2004-08-23  Erik Grinaker <erikg@codepoet.no>

	* changed the accelerators for adding, editing and removing
	entries to Control-Insert, Control-Return and Control-Delete

	* added key handler to the tree view to allow Insert, Return
	and Delete to be used when navigating the tree

	* added preference inputs for launcher commands

	* multiple entries can now be launched simultaneously

2004-08-12  Erik Grinaker <erikg@codepoet.no>

	* added a password generator dialog

2004-08-11  Erik Grinaker <erikg@codepoet.no>

	* minor tweaks to launcher code

	* added a search toolbar

2004-08-10  Erik Grinaker <erikg@codepoet.no>

	* added an exception handler which displays a dialog with
	a traceback whenever an unhandled exception occurs
